add standard spring test plugins